feat(cluster): implement rebitcask cluster setup
